--- a/stylesheets.css
+++ b/stylesheets.css
@@ -25,3 +25,10 @@
   border-radius: 5px;
   padding: 2px;
 }
+.items {
+  border-radius: 25px;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  padding: 10px;
+}
