--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,6 +1,4 @@
-
-
-.center {
+#getSTARTED {
   text-align: center;
   font-size: 60px;
   font-family: Arial, Helvetica, sans-serif;
@@ -10,6 +8,19 @@
   border-width: 3px;
   text-decoration: none;
   color:green;
+  border-radius: 5px;
+  padding: 2px;
+}
+
+#questionadd {
+  text-align: center;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: seagreen;
+  font-weight: bold;
+  border-style: solid;
+  border-width: 3px;
+  text-decoration: none;
   border-radius: 5px;
   padding: 2px;
 }
